Removed duplicate fields on HelmChart proto file
