# api/app/apps.swagger.json
@@ -388,20 +388,8 @@
             "schema": {
               "type": "object",
               "properties": {
-                "name": {
-                  "type": "string"
-                },
-                "sourceRef": {
-                  "$ref": "#/definitions/v1SourceRef"
-                },
-                "chart": {
-                  "type": "string"
-                },
-                "version": {
-                  "type": "string"
-                },
-                "interval": {
-                  "$ref": "#/definitions/v1Interval"
+                "helmChart": {
+                  "$ref": "#/definitions/v1HelmChart"
                 }
               }
             }
@@ -922,7 +910,8 @@
         "interval": {
           "$ref": "#/definitions/v1Interval"
         }
-      }
+      },
+      "title": "HelmChart"
     },
     "v1HelmRepository": {
       "type": "object",
